debezium/dbz#1620 CockroachDB connector: BaseSourceTask rewrite, schema registration, E2E pipeline, Cloud IT
- Rewrote CockroachDBConnectorTask to extend BaseSourceTask with proper Debezium pipeline wiring
- Implemented schema registration via information_schema queries with PK discovery
- Created CockroachDBSnapshotChangeEventSource (no-op, returns SKIPPED)
- Fixed DebeziumHeaderProducer null, changefeedExists column lookup, bootstrap server parsing
- Added CockroachDBCloudConnectionIT (SSL verify-full, 6 tests)
- Added CockroachDBEndToEndIT (Testcontainers, 5 SourceRecords validated)
- Removed dead code, unused imports, and DOCUMENTATION.md (merged into README.md)
- Updated doc links to use stable URLs, CockroachDB version default to v26.1.0
- 91 unit tests pass, 0 compiler warnings, format/imports clean

Signed-off-by: Virag Tripathi <virag.tripathi@gmail.com>